adjust all section tags to div to support IE8

--- a/about.html
+++ b/about.html
@@ -35,14 +35,14 @@
 			<li><a href="contacts.html">Contacts</a></li>
 		</ul>
 	</header>
-	<section>
+	<div>
 		<h1>About Club</h1>
 		<img src="img/hiker_in_woods.jpg" alt="Hiker in the woods">
 		<h2>Information about us</h2>
 		<p>The Hiking and Camping Club was founded in the late Fall of 2000, when Pickwick began scouring the Web for an ourdoor club in the Atlanta area that was for all ages, was close to the city, and held events of all sorts (hiking, canoeing, biking, etc.)</p>
 		<p>When the Web didn't seem to offer any answers, we decided to use her web development knowledge to form an online meeting and information place for a club.</p>
-	</section>
-	<section>
+	</div>
+	<div>
 		<h1>Our History</h1>
 		<div>
 			<h2>2010 &#45; </h2>
@@ -64,8 +64,8 @@
 			<h2>2015 &#45; </h2>
 			<p>We extended our activities to include the field of specialized items meeting the world's increasing needs.</p>
 		</div>
-	</section>
-	<section>
+	</div>
+	<div>
 		<h1>Our Mission</h1>
 		<h2>Hiking and Camping Club mission:</h2>
 		<p>The Club, as a business, is an extension of who we, the staff, are as people. Climbers. Backpackers. Kayakers. Yoga instructors. Adventurers. We share our love of special places reached through rigorous activity.</p>
@@ -90,9 +90,9 @@
 				<i class="fa fa-chevron-right" aria-hidden="true"> mountaineering</i>
 			</li>
 		</ul>
-	</section>
+	</div>
 	
-	<section>
+	<div>
 		<h1>Meet Our Team</h1>
 		<div>
 			<img src="img/bradley.jpg" alt="Bradley Grosh profile picture">
@@ -114,9 +114,9 @@
 			<h2>Edna Barton</h2>
 			<p>Instructor</p>
 		</div>
-	</section>
+	</div>
 
-	<section>
+	<div>
 		<h1>Our Advantages</h1>
 		<ol>
 			<li>
@@ -144,9 +144,9 @@
 			<h2><span>3</span> Advanced technology</h2>
 			<p>Club is one of the largest providers of a variety of services technology to governmental agencies.</p>
 		</div> -->
-	</section>
+	</div>
 
-	<section>
+	<div>
 		<h1>Advice</h1>
 		<h2>Please read attentively</h2>
 		<p>We gathered all recently asked questions, please read them attentively, especially if you have never hiked in your life:</p>
@@ -179,14 +179,14 @@
 				<i class="fa fa-chevron-right" aria-hidden="true"> Fire Starters</i>
 			</li>
 		</ul>
-	</section>
-	<section>
+	</div>
+	<div>
 		<h1>Testimonials</h1>
 		<q>A great time and value. Set in a beautiful area of the park. An experience to remember for a lifetime for not only myself, but my kids and their cousins as well!</q>
 		<p>Mark Johnson</p>
-	</section>
+	</div>
 
-	<section>
+	<div>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="#">About Club</a></li>
@@ -210,7 +210,7 @@
 				<li><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></li>
 			</ul>
 			<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>		
-	</section>
+	</div>
 
 </body>
 </html>
