--- a/contacts.html
+++ b/contacts.html
@@ -67,7 +67,7 @@
 <!-- 	<iframe width="600" height="450" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/place?q=place_id:EikyOCBXIEphY2tzb24gQmx2ZCwgQ2hpY2FnbywgSUwgNjA2MDQsIFVTQQ&key=AIzaSyDn_Kn8myjNs9q_ZTSVgoZs8hVcD-vzKa8" allowfullscreen></iframe> -->
 
-	<section>
+	<div>
 		<h1>Address</h1>
 		<p>Please note that we are unable to return long distance calls unless it is a toll-free number.<br> 
 		We accept cash and cheque only.</p>
@@ -82,7 +82,7 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:EikyOCBXIEphY2tzb24gQ
 			<li>FAX:<a href="fax: +1 800 889 9898"> +1 800 889 9898</a></li>
 			<li>E-mail: <a href="mailto:mail@demolink.com">mail&#64demolink.com</a></li>
 		</ul>
-	</section>
+	</div>
 
 	<form>
 		<h1>Contact Form</h1>
@@ -94,7 +94,7 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:EikyOCBXIEphY2tzb24gQ
 		<span>required fields&#42;</span>
 	</form>
 
-	<section>
+	<div>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About Club</a></li>
@@ -118,7 +118,7 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:EikyOCBXIEphY2tzb24gQ
 				<li><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></li>
 			</ul>
 			<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
-	</section>
+	</div>
 
 </body>
 </html>
