--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 		</ul>
 	</header>
 	
-	<section>
+	<div>
 		<img src="img/banner-1.jpg" alt="man hiking on mountain crest">
 		<h1>Open new spaces in your area!</h1>
 		<a href="#">JOIN</a>
-	</section>
+	</div>
 
-	<section>
+	<div>
 		<h1>Why Join Our Club?</h1>
 		<div>
 			<img src="img/map-icon.png" alt="map icon">
@@ -84,9 +84,9 @@
 			<img src="img/mountain-icon.png" alt="mountain icon">
 			<p>Mountain vistas, pristine lakes, rushing streams, wild rivers</p>
 		</div>
-	</section>
+	</div>
 	
-	<section>
+	<div>
 		<h1>Our Adventures</h1>
 		<div>
 			<img src="img/rafting.jpg" alt="rafting">
@@ -101,9 +101,9 @@
 			<img src="img/backpacking.jpg" alt="backpacking">
 			<a href="#">Backpacking</a>
 		</div>
-	</section>
+	</div>
 	
-	<section>
+	<div>
 		<h1>News &amp; Events</h1>
 		
 		<div>
@@ -137,9 +137,9 @@
 			<a href="#">LEARN MORE</a>
 		</div>
 
-	</section>
+	</div>
 
-	<section>
+	<div>
 		<h1>Testimonials</h1>
 		<div>
 			<img src="img/nelson-smith.jpg" alt="Nelson Smith">
@@ -151,9 +151,9 @@
 			<q>This club offers guided hiking and walking trips year-round - as well as wilderness camping, backpacking, cross-country skiing, and snowshoeing trips - visiting some of the wildest and natural areas.</q>
 			<p>&#45 Melina Jones</p>
 		</div>
-	</section>
+	</div>
 
-	<section>
+	<div>
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="about.html">About Club</a></li>
@@ -177,7 +177,7 @@
 			<li><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></li>
 		</ul>
 		<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
-	</section>
+	</div>
 	<div id="googleMap" style="width:500px;height:380px;"></div>
 
 </body>
