--- a/trips.html
+++ b/trips.html
@@ -35,7 +35,7 @@
 			<li><a href="contacts.html">Contacts</a></li>
 		</ul>
 	</header>
-	<section>
+	<div>
 		<h1>News and Events from The Club</h1>
 		<p>As one of the leading names in the outdoor industry The Club is keen to keep members informed with news, events and latest safety information.</p>
 		<div>
@@ -53,13 +53,13 @@
 			<p>You'll find information on farm shops, farmers' markets and food festivals near to Club, Camping in the Forest and Certificated Sites.</p>
 			<a href="#">LEARN MORE</a>
 		</div>
-	</section>
-	<section>
+	</div>
+	<div>
 		<h1>Why Join Our Club?</h1>
 		<p>In our busy world it isn’t always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best and most interesting hiking clubs in this part of the country, with an endless array of hikes to choose from on weekends year-round, and hundreds of fellow-members to meet and share memorable times with while hiking in the most scenic natural areas.</p>
 		<a href="#">LEARN MORE</a>
-	</section>
-	<section>
+	</div>
+	<div>
 		<h1>Guided Trips and Workshops</h1>
 		
 		<img src="img/skills_workshops.jpg" alt="backpack on a ledge">
@@ -77,9 +77,9 @@
 		<img src="img/first_aid_courses.jpg" alt="EMT with an injured man on a stretcher">
 		<h2>First Aid Courses</h2>
 		<p>First Aid courses through Wilderness Medical Associates throughout the year. These courses will help you prepare for an emergency when you are miles from help.</p>
-	</section>
+	</div>
 
-	<section>
+	<div>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About Club</a></li>
@@ -103,6 +103,6 @@
 				<li><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></li>
 			</ul>
 			<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
-	</section>
+	</div>
 </body>
 </html>
