fix input closing tag

--- a/contacts.html
+++ b/contacts.html
@@ -86,7 +86,7 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:EikyOCBXIEphY2tzb24gQ
 
 	<form>
 		<h1>Contact Form</h1>
-		<input type="text" name="contact_name" placeholder="Name&#42;" aria-required="true" required />
+		<input type="text" name="contact_name" placeholder="Name&#42;" aria-required="true" required>
 		<input type="email" name="contact_email" placeholder="Email&#42;" aria-required="true" required>
 		<input type="tel" name="contact_telephone" aria-required="false" placeholder="Phone">
 		<textarea name="contact_message" placeholder="Message&#42;" aria-required="true" required></textarea>
