add main css file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Hiking USA</title>
 	<link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ >
+	<link rel="stylesheet" href="css/main.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,6 +42,12 @@
 			<img src="img/logo.png" alt="logo">
 			<p>Hiking and Camping Club</p>
 		</div>
+
+		<div id="mobile-menu">
+			<i class="fa fa-bars" aria-hidden="true"></i>
+			<h1>HOME</h1>
+		</div>
+
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="about.html">About Club</a></li>
