add mobile menu css

--- a/index.html
+++ b/index.html
@@ -44,31 +44,31 @@
 		</div>
 
 		<div id="mobile-menu">
-			<i class="fa fa-bars" aria-hidden="true"></i>
-			<h1>HOME</h1>
-		</div>
+			<i class="fa fa-times" aria-hidden="true">  HOME</i>
+			
 
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="about.html">About Club</a></li>
-			<li><a href="trips.html">Trip Schedule</a>
-				<ul>
-					<li><a href="#">Camping</a></li>
-					<li><a href="#">Kayaking</a></li>
-					<li><a href="#">Cycling</a>
-						<ul>
-							<li><a href="#">For beginners</a></li>
-							<li><a href="#">For advanced</a></li>
-							<li><a href="#">For professionals<a/></li>
-						</ul>
-					</li>
-					<li><a href="#">Mountaineering</a></li>
-					<li><a href="#">Caving</a></li>
-				</ul>
-			</li>
-			<li><a href="gallery.html">Gallery</a></li>
-			<li><a href="contacts.html">Contacts</a></li>
-		</ul>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="about.html">About Club</a></li>
+				<li><a href="trips.html">Trip Schedule</a>
+					<ul class="trip-menu">
+						<li><a href="#">Camping</a></li>
+						<li><a href="#">Kayaking</a></li>
+						<li><a href="#">Cycling</a>
+							<ul>
+								<li><a href="#">For beginners</a></li>
+								<li><a href="#">For advanced</a></li>
+								<li><a href="#">For professionals<a/></li>
+							</ul>
+						</li>
+						<li><a href="#">Mountaineering</a></li>
+						<li><a href="#">Caving</a></li>
+					</ul>
+				</li>
+				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="contacts.html">Contacts</a></li>
+			</ul>
+		</div>
 	</header>
 	
 	<div>
@@ -185,6 +185,7 @@
 		</ul>
 		<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
 	</div>
+
 	<div id="googleMap" style="width:500px;height:380px;"></div>
 
 </body>
