add mobile menu to home page

--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
 			<p>Hiking and Camping Club</p>
 		</div>
 
-		<div id="mobile-menu">
+		<div id="menu">
 			<i class="fa fa-times" aria-hidden="true">  HOME</i>
 			
-
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="about.html">About Club</a></li>
