Add hidden veggie burger menu

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 		<div id="menu">
 			<i class="fa fa-times" aria-hidden="true">  HOME</i>
+			<i class="fa fa-bars" aria-hidden="true">  HOME</i>
 			
 			<ul>
 				<li><a href="#">Home</a></li>
