wrap image and text to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -44,25 +44,32 @@
 		<div>
 			<img src="img/dude_on_a_rock.jpg" alt="hiker on top of a rock">
 			<a href="#">Image 1</a>
-	
+	</div>
+		<div>
 			<img src="img/getting_wet.jpg" alt="white water rafting">
 			<a href="#">Image 2</a>
-	
+		</div>
+		<div>
 			<img src="img/hunting_for_rocks.jpg" alt="fly fishing">
 			<a href="#">Image 3</a>
-			
+		</div>
+		<div>
 			<img src="img/squirrel.jpg" alt="hiker pointing">
 			<a href="#">Image 4</a>
-
+		</div>
+		<div>
 			<img src="img/can_i_keep_it.jpg" alt="fisherman with his catch">
 			<a href="#">Image 5</a>
-
+		</div>
+		<div>
 			<img src="img/its_dark_yet_i_wear_shades.jpg" alt="nighttime fishing">
 			<a href="#">Image 6</a>
-
+		</div>
+		<div>
 			<img src="img/adrian.jpg" alt="hiker reaches top of mountain">
 			<a href="#">Image 7</a>
-
+		</div>
+		<div>
 			<img src="img/blackhawk_down.jpg" alt="hiker taking a photo of another hiker">
 			<a href="#">Image 8</a>
 		</div>
