change nav tag to div to support IE8 on gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -35,12 +35,12 @@
 		</ul>
 	</header>
 	<div>
-		<nav>
-			<a href="#">show all</a>
-			<a href="#">first category</a>
-			<a href="#">second category</a>
-			<a href="#">third category</a>
-		</nav>
+		<ul>
+			<li><a href="#">show all</a></li>
+			<li><a href="#">first category</a></li>
+			<li><a href="#">second category</a></li>
+			<li><a href="#">third category</a></li>
+		</ul>
 		<div>
 			<img src="img/dude_on_a_rock.jpg" alt="hiker on top of a rock">
 			<a href="#">Image 1</a>
