--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 		</div>
 
 		<div id="menu">
-			<i class="fa fa-times" aria-hidden="true">  HOME</i>
-			<i class="fa fa-bars" aria-hidden="true">  HOME</i>
+			<i class="fa fa-times" aria-hidden="true"></i>
+			<i class="fa fa-bars" aria-hidden="true"></i>
+			<h1>Home</h1>
 			
 			<ul>
 				<li><a href="#">Home</a></li>
