--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<li><a href="#">Home</a></li>
 				<li><a href="about.html">About Club</a></li>
 				<li><a href="trips.html">Trip Schedule</a>
+					<i class="fa fa-chevron-down" aria-hidden="true"></i>
 					<ul class="trip-menu">
 						<li><a href="#">Camping</a></li>
 						<li><a href="#">Kayaking</a></li>
