add fonts and chevron

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ >
 	<link rel="stylesheet" href="css/main.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
