--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 		</div>
 
 		<div id="menu">
-			<i class="fa fa-times" aria-hidden="true"></i>
-			<i class="fa fa-bars" aria-hidden="true"></i>
-			<h1>Home</h1>
-			
+			<div>
+				<i class="fa fa-times" aria-hidden="true"></i>
+				<i class="fa fa-bars" aria-hidden="true"></i>
+				<h1>Home</h1>
+			</div>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="about.html">About Club</a></li>
