--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<h1>Home</h1>
 			</div>
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li class="selected"><a href="#">Home</a></li>
 				<li><a href="about.html">About Club</a></li>
 				<li><a href="trips.html">Trip Schedule</a>
 					<i class="fa fa-chevron-down" aria-hidden="true"></i>
