--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<ul>
 				<li class="selected"><a href="#">Home</a></li>
 				<li><a href="about.html">About Club</a></li>
-				<li><a href="trips.html">Trip Schedule</a>
+				<li class="trip-list-item"><a href="trips.html">Trip Schedule</a>
 					<i class="fa fa-chevron-down" aria-hidden="true"></i>
 					<ul class="trip-menu">
 						<li><a href="#">Camping</a></li>
