--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<header>
 		<div>
 			<img src="img/logo.png" alt="logo">
-			<p>Hiking and Camping Club</p>
+			<h1>Hiking and Camping Club</h1>
 		</div>
 
 		<div id="menu">
