--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 				<li><a href="about.html">About Club</a></li>
 				<li class="trip-list-item"><a href="trips.html">Trip Schedule</a>
 					<i class="fa fa-chevron-down" aria-hidden="true"></i>
+					<i class="fa fa-caret-down" aria-hidden="true"></i>
+
 					<ul class="trip-menu">
 						<li><a href="#">Camping</a></li>
 						<li><a href="#">Kayaking</a></li>
