--- a/index.html
+++ b/index.html
@@ -18,41 +18,43 @@
 
 <body>	
 	<header>
-		<div>
-			<img src="img/logo.png" alt="logo">
-			<h1>Hiking and Camping Club</h1>
-		</div>
-
-		<div id="menu">
+		<div class="lg-container">
 			<div>
-				<i class="fa fa-times" aria-hidden="true"></i>
-				<i class="fa fa-bars" aria-hidden="true"></i>
-				<h1>Home</h1>
+				<img src="img/logo.png" alt="logo">
+				<h1>Hiking and Camping Club</h1>
 			</div>
-			<ul>
-				<li class="selected"><a href="#">Home</a></li>
-				<li><a href="about.html">About Club</a></li>
-				<li class="trip-list-item"><a href="trips.html">Trip Schedule</a>
-					<i class="fa fa-chevron-down" aria-hidden="true"></i>
-					<i class="fa fa-caret-down" aria-hidden="true"></i>
 
-					<ul class="trip-menu">
-						<li><a href="#">Camping</a></li>
-						<li><a href="#">Kayaking</a></li>
-						<li><a href="#">Cycling</a>
-							<ul>
-								<li><a href="#">For beginners</a></li>
-								<li><a href="#">For advanced</a></li>
-								<li><a href="#">For professionals<a/></li>
-							</ul>
-						</li>
-						<li><a href="#">Mountaineering</a></li>
-						<li><a href="#">Caving</a></li>
-					</ul>
-				</li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="contacts.html">Contacts</a></li>
-			</ul>
+			<div id="menu">
+				<div>
+					<i class="fa fa-times" aria-hidden="true"></i>
+					<i class="fa fa-bars" aria-hidden="true"></i>
+					<h1>Home</h1>
+				</div>
+				<ul>
+					<li class="selected"><a href="#">Home</a></li>
+					<li><a href="about.html">About Club</a></li>
+					<li class="trip-list-item"><a href="trips.html">Trip Schedule</a>
+						<i class="fa fa-chevron-down" aria-hidden="true"></i>
+						<i class="fa fa-caret-down" aria-hidden="true"></i>
+
+						<ul class="trip-menu">
+							<li><a href="#">Camping</a></li>
+							<li><a href="#">Kayaking</a></li>
+							<li><a href="#">Cycling</a>
+								<ul>
+									<li><a href="#">For beginners</a></li>
+									<li><a href="#">For advanced</a></li>
+									<li><a href="#">For professionals<a/></li>
+								</ul>
+							</li>
+							<li><a href="#">Mountaineering</a></li>
+							<li><a href="#">Caving</a></li>
+						</ul>
+					</li>
+					<li><a href="gallery.html">Gallery</a></li>
+					<li><a href="contacts.html">Contacts</a></li>
+				</ul>
+			</div>
 		</div>
 	</header>
 	
