WIP add submenu for desktop trip schedule

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 								<ul>
 									<li><a href="#">For beginners</a></li>
 									<li><a href="#">For advanced</a></li>
-									<li><a href="#">For professionals<a/></li>
+									<li><a href="#">For professionals</a></li>
 								</ul>
 							</li>
 							<li><a href="#">Mountaineering</a></li>
