add right angle for cycling menu

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 							<li><a href="#">Camping</a></li>
 							<li><a href="#">Kayaking</a></li>
 							<li><a href="#">Cycling</a>
+								<i class="fa fa-angle-right" aria-hidden="true"></i>
 								<ul>
 									<li><a href="#">For beginners</a></li>
 									<li><a href="#">For advanced</a></li>
