add cycling submenu presentation and style

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<ul class="trip-menu">
 							<li><a href="#">Camping</a></li>
 							<li><a href="#">Kayaking</a></li>
-							<li><a href="#">Cycling</a>
+							<li class="cycling-list"><a href="#">Cycling</a>
 								<i class="fa fa-angle-right" aria-hidden="true"></i>
 								<ul>
 									<li><a href="#">For beginners</a></li>
