WIP banner image for mobile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</div>
 	</header>
 	
-	<div>
+	<div class="banner">
 		<img src="img/banner-1.jpg" alt="man hiking on mountain crest">
 		<h1>Open new spaces in your area!</h1>
 		<a href="#">JOIN</a>
