adjust map sizing

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 		<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
 	</div>
 
-	<div id="googleMap" style="width:500px;height:380px;"></div>
+	<div id="googleMap"></div>
 
 </body>
 </html>
