WIP add join button styling for banner button

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div class="banner">
 		<img src="img/banner-1.jpg" alt="man hiking on mountain crest">
 		<h1>Open new spaces in your area!</h1>
-		<a href="#">JOIN</a>
+		<a href="#" class="banner-button button">JOIN</a>
 	</div>
 
 	<div>
