--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="javascripts/map.js"></script>
 </head>
 
-<body>	
+<body class="center">
 	<header>
 		<div class="lg-container">
 			<div>
@@ -66,15 +66,15 @@
 	<div>
 		<h1>Why Join Our Club?</h1>
 		<div>
-			<img src="img/map-icon.png" alt="map icon">
+			<img src="img/map-icon.png" alt="map icon" class="club-icons">
 			<p>A wide range of locations and often unique locations and often unique hiking trip itineraries</p>
 		</div>
 		<div>
-			<img src="img/hiker-icon.png" alt="hiker icon">
+			<img src="img/hiker-icon.png" alt="hiker icon" class="club-icons">
 			<p>Meet an extremely active group with hikes every weekend</p>
 		</div>
 		<div>
-			<img src="img/mountain-icon.png" alt="mountain icon">
+			<img src="img/mountain-icon.png" alt="mountain icon" class="club-icons">
 			<p>Mountain vistas, pristine lakes, rushing streams, wild rivers</p>
 		</div>
 	</div>
