WIP add style to join club section for mobile

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<a href="#" class="banner-button button">JOIN</a>
 	</div>
 
-	<div>
+	<div class="join-club">
 		<h1>Why Join Our Club?</h1>
 		<div>
 			<img src="img/map-icon.png" alt="map icon" class="club-icons">
