adjust join club p styles

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<h1>Why Join Our Club?</h1>
 		<div>
 			<img src="img/map-icon.png" alt="map icon" class="club-icons">
-			<p>A wide range of locations and often unique locations and often unique hiking trip itineraries</p>
+			<p>A wide range of locations and often unique hiking trip itineraries</p>
 		</div>
 		<div>
 			<img src="img/hiker-icon.png" alt="hiker icon" class="club-icons">
