--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 		</div>
 	</div>
 	
-	<div>
+	<div class="adventures">
 		<h1>Our Adventures</h1>	
 		<div>
 			<img src="img/rafting.jpg" alt="rafting">
-			<a href="#">Rafting</a>
+			<div><a href="#">Rafting</a></div>
 		</div>
 		<div>
 			<img src="img/mountain-vistas.jpg" alt="mountain vistas">
