--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
 	
 	<div class="adventures">
 		<h1>Our Adventures</h1>	
-		<div>
+		
 			<img src="img/rafting.jpg" alt="rafting">
-			<div><a href="#">Rafting</a></div>
-		</div>
-		<div>
+			<a href="#">Rafting</a>
+		
+		
 			<img src="img/mountain-vistas.jpg" alt="mountain vistas">
 			<a href="#">Mountain vistas</a>
-		</div>
-		<div>
+		
+		
 			<img src="img/fishing.jpg" alt="fishing">
 			<a href="#">Fishing</a>
-		</div>
-		<div>
+		
+		
 			<img src="img/backpacking.jpg" alt="backpacking">
 			<a href="#">Backpacking</a>
-		</div>
+		
 	</div>
 	
 	<div>
