add div container for adventure image and caption

--- a/index.html
+++ b/index.html
@@ -82,21 +82,25 @@
 	<div class="adventures">
 		<h1>Our Adventures</h1>	
 		
-			<img src="img/rafting.jpg" alt="rafting">
-			<a href="#">Rafting</a>
+			<div>
+				<img src="img/rafting.jpg" alt="rafting">
+				<a href="#">Rafting</a>
+			</div>
 		
-		
-			<img src="img/mountain-vistas.jpg" alt="mountain vistas">
-			<a href="#">Mountain vistas</a>
-		
-		
-			<img src="img/fishing.jpg" alt="fishing">
-			<a href="#">Fishing</a>
-		
-		
-			<img src="img/backpacking.jpg" alt="backpacking">
-			<a href="#">Backpacking</a>
-		
+			<div>
+				<img src="img/mountain-vistas.jpg" alt="mountain vistas">
+				<a href="#">Mountain vistas</a>
+			</div>
+
+			<div>		
+				<img src="img/fishing.jpg" alt="fishing">
+				<a href="#">Fishing</a>
+			</div>
+
+			<div>		
+				<img src="img/backpacking.jpg" alt="backpacking">
+				<a href="#">Backpacking</a>
+			</div>
 	</div>
 	
 	<div>
