add style for adventures in tablet

--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
 				<a href="#">Rafting</a>
 			</div>
 		
-			<div>
+			<div class="visible-mobile visible-tablet">
 				<img src="img/mountain-vistas.jpg" alt="mountain vistas">
 				<a href="#">Mountain vistas</a>
 			</div>
 
-			<div>		
+			<div class="visible-mobile">		
 				<img src="img/fishing.jpg" alt="fishing">
 				<a href="#">Fishing</a>
 			</div>
 
-			<div>		
+			<div class="visible-mobile">		
 				<img src="img/backpacking.jpg" alt="backpacking">
 				<a href="#">Backpacking</a>
 			</div>
