--- a/index.html
+++ b/index.html
@@ -82,22 +82,22 @@
 	<div class="adventures">
 		<h1>Our Adventures</h1>	
 	
-			<div>
+			<div class="adventure-grp">
 				<img src="img/rafting.jpg" alt="rafting">
 				<a href="#">Rafting</a>
 			</div>
 		
-			<div class="visible-mobile visible-tablet">
+			<div class="adventure-grp visible-mobile visible-tablet">
 				<img src="img/mountain-vistas.jpg" alt="mountain vistas">
 				<a href="#">Mountain vistas</a>
 			</div>
 
-			<div class="visible-mobile">		
+			<div class="adventure-grp visible-mobile">		
 				<img src="img/fishing.jpg" alt="fishing">
 				<a href="#">Fishing</a>
 			</div>
 
-			<div class="visible-mobile">		
+			<div class="adventure-grp visible-mobile">		
 				<img src="img/backpacking.jpg" alt="backpacking">
 				<a href="#">Backpacking</a>
 			</div>
