--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
 			</div>
 	</div>
 	
-	<div>
+	<div class="news_img">
+		<img src="img/sunset_with_shore.jpg" alt="sunset with rocky shore">
 		<h1>News &amp; Events</h1>
 		
 		<div>
