remove span from news and events markup

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 	</div>
 	
 	<div class="news-container">
-			<img src="img/sunset_with_shore.jpg" alt="sunset with rocky shore">
+		<img src="img/sunset_with_shore.jpg" alt="sunset with rocky shore">
 
-		<div><span>
+		<div>
 
 			<h1>News &amp; Events</h1>
 			
@@ -140,7 +140,7 @@
 				<p>Hiking is the preferred term for a long, vigorous walk, while the word walking is used for shorter, particularly urban walks.</p>
 				<a href="#">LEARN MORE</a>
 			</div>
-		</span></div>
+		</div>
 	</div>
 
 	<div>
