WIP add clearfix to tablet news content

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				<p>It is distinguished from canoeing by the sitting position of the paddler and the number of blades on the paddle.</p>
 				<a href="#" class="button">LEARN MORE</a>
 			</div>
-			<div>
+			<div class="clearfix">
 				<h2>12/12</h2>
 				<h2>Cycling</h2>
 				<p>Cycling is widely regarded as a very effective and efficient mode of transportation optimal for short to moderate distances.</p>
