WIP mobile style for testimonials

--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
 		</div>
 	</div>
 
-	<div>
+	<div class="testimonials">
 		<h1>Testimonials</h1>
 		<div>
 			<img src="img/nelson-smith.jpg" alt="Nelson Smith">
 			<q>In our busy world it isn't always easy to find friends or companions to hike with. If you become a member of our club you’ll be joining what people frequently tell us one of the best hiking clubs in this country.</q>
-			<p>&#45 Nelson Smith</p>
+			<p>&#151 Nelson Smith</p>
 		</div>
 		<div>
 			<img src="img/melina-jones.jpg" alt="Melina Jones">
 			<q>This club offers guided hiking and walking trips year-round - as well as wilderness camping, backpacking, cross-country skiing, and snowshoeing trips - visiting some of the wildest and natural areas.</q>
-			<p>&#45 Melina Jones</p>
+			<p>&#151 Melina Jones</p>
 		</div>
 	</div>
 
