--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<i class="fa fa-bars" aria-hidden="true"></i>
 					<h1>Home</h1>
 				</div>
-				<ul>
+				<ul class="navigation">
 					<li class="selected"><a href="#">Home</a></li>
 					<li><a href="about.html">About Club</a></li>
 					<li class="trip-list-item"><a href="trips.html">Trip Schedule</a>
@@ -163,8 +163,8 @@
 		</div>
 	</div>
 
-	<div>
-		<ul>
+	<div class="bottom-nav">
+		<ul class="navigation">
 			<li><a href="#">Home</a></li>
 			<li><a href="about.html">About Club</a></li>
 			<li><a href="trips.html">Trip Schedule</a></li>
