--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 	<div class="bottom-nav">
 		<ul class="navigation">
-			<li><a href="#">Home</a></li>
+			<li><a href="#" class="selected">Home</a></li>
 			<li><a href="about.html">About Club</a></li>
 			<li><a href="trips.html">Trip Schedule</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
