add style for social media style on mobile

--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
 			<p><a href="mailto:mail@demolink.com">mail&#64demolink.com</a></p>
 		</address>
 
-		<ul>
-			<li><i class="fa fa-youtube fa-4x" aria-hidden="true"></i></li>
-			<li><i class="fa fa-tumblr fa-4x" aria-hidden="true"></i></li>
-			<li><i class="fa fa-twitter fa-4x" aria-hidden="true"></i></li>
-			<li><i class="fa fa-facebook fa-4x" aria-hidden="true"></i></li>
-			<li><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></li>
+		<ul class="social-media">
+			<li><i class="fa fa-youtube fa-3x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-tumblr fa-3x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></li>
+			<li><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></li>
 		</ul>
 		<p>Hiking and Camping Club &#169 2016. Privacy Policy</p>
 	</div>
