--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
+	<script src="http://maps.googleapis.com/maps/api/js">
+	</script>
+	<script src="javascripts/map.js"></script>
 	
 
 	
@@ -189,8 +192,7 @@
 	</div>
 
 	<div id="googleMap"></div>
-	<script src="javascripts/map.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWTn3RcA5c7hC3sYHTlHNrTH3-Sd7w4As&callback=initialize"></script>
+	
 	
 </body>
 </html>
